correction of agents' movement (agents did not move)

--- a/interactive-evolution-ai/config/settings.ini
+++ b/interactive-evolution-ai/config/settings.ini
@@ -11,6 +11,10 @@ food_quantity = 15
 generations = 1000
 food_respawn = no
 continue_generations = 500
+# Порог чувствительности для движения (используется в тренировке и игре).
+# Если |выход сети| > порога, агент двигается.
+# Значение от 0.0 (очень чувствительно) до 1.0 (почти никогда не двигается).
+move_threshold = 0.1
 
 [Display]
 fps = 10
